# born2golf

./: .gitignore  CMakeLists.txt  editor  golf
data/config/: game.cfg
data/levels/: level-1.level  level-3.level
data/ui/: ui.ui
src/common/: CMakeLists.txt
src/editor/: CMakeLists.txt  gi.c
src/golf/: ui.c
